[tool.poetry]
name = "ghome-foyer-api"
version = "0.0.0"
description = "Generated protobuf stubs for Google Home Foyer API"
authors = ["Ruslan Sayfutdinov <ruslan@sayfutdinov.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "ghome_foyer_api"}]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Intended Audience :: Developers",
    "Topic :: Software Development",
]
keywords = ["Google Home", "Foyer API"]
homepage = "https://github.com/KapJI/ghome-foyer-api"
repository = "https://github.com/KapJI/ghome-foyer-api"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/KapJI/ghome-foyer-api/issues"
"Release Notes" = "https://github.com/KapJI/ghome-foyer-api/releases"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
isort = "^5.12.0"
mypy = "^0.991"
mypy-protobuf = "^3.4.0"
pre-commit = "^3.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
force_sort_within_sections = true
combine_as_imports = true

[tool.mypy]
python_version = "3.9"
show_error_codes = true
strict = true
disallow_any_explicit = true
disallow_any_unimported = true
warn_no_return = true
warn_unreachable = true
