[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "ghome-foyer-api"
version = "0.0.0"
description = "Generated protobuf stubs for Google Home Foyer API"
authors = ["Ruslan Sayfutdinov <ruslan@sayfutdinov.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "ghome_foyer_api"}]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Intended Audience :: Developers",
    "Topic :: Software Development",
]
keywords = ["Google Home", "Foyer API"]
homepage = "https://github.com/KapJI/ghome-foyer-api"
repository = "https://github.com/KapJI/ghome-foyer-api"
include = ["ghome_foyer_api/py.typed"]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/KapJI/ghome-foyer-api/issues"
"Release Notes" = "https://github.com/KapJI/ghome-foyer-api/releases"

[tool.poetry.dependencies]
python = "^3.9"
grpcio = "^1.66.2"
protobuf = "^5.28.3"

[tool.poetry.group.dev.dependencies]
grpc-stubs = "^1.53.0.5"
grpcio-tools = "^1.66.2"
mypy = "^1.13.0"
mypy-protobuf = "^3.6.0"
pre-commit = "^4.0.1"
ruff = "^0.7.2"
types-protobuf = "^5.28"

[tool.ruff]
required-version = ">=0.7.0"
target-version = "py39"

[tool.ruff.lint.isort]
force-sort-within-sections = true
combine-as-imports = true
split-on-trailing-comma = false

[tool.mypy]
python_version = "3.9"
show_error_codes = true
strict = true
disallow_any_explicit = true
disallow_any_unimported = true
warn_no_return = true
warn_unreachable = true
